name:                trac-to-remarkup
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:    Trac.Parser,
                      Trac.Writer,
                      Trac.Pretty,
                      Trac.Convert,
                      Trac.Db,
                      Trac.Db.Types,
                      Trac.Web
  build-depends:       base >=4.9 && <4.13,
                       bytestring,
                       megaparsec > 5 && < 6,
                       NoTrace,
                       mtl,
                       text,
                       containers,
                       time,
                       postgresql-simple,
                       aeson,
                       process,
                       servant,
                       servant-client
  hs-source-dirs:      src
  default-language:    Haskell2010

library gitlab-servant
  exposed-modules:     GitLab.Tickets
                       GitLab.Users
                       GitLab.Project
                       GitLab.UploadFile
                       GitLab.Common
  build-depends:       base >=4.9 && <4.13,
                       bytestring,
                       text,
                       directory,
                       exceptions >= 0.9,
                       aeson,
                       mtl,
                       time,
                       containers,
                       servant,
                       servant-client,
                       process
  hs-source-dirs:      src
  default-language:    Haskell2010

executable trac-import
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base,
                       bytestring,
                       directory,
                       text,
                       transformers,
                       mtl,
                       async,
                       stm,
                       containers,
                       exceptions >= 0.9,
                       postgresql-simple,
                       trac-to-remarkup,
                       gitlab-servant,
                       servant-client,
                       http-types,
                       data-default,
                       connection,
                       http-client-tls

Test-Suite test
    default-language:    Haskell2010
    type:       exitcode-stdio-1.0
    main-is:    test.hs
    hs-source-dirs: test/
    build-depends: base, directory, trac-to-remarkup, silently, filepath, pretty-show

